syntax = "proto3";
package remoteTelegramCommands;



service RemoteCommand {
 rpc RegisterCommand(RemoteCommandRequest) returns (stream RemoteRequest) {}
 rpc RegisterCommandLet(Request) returns (stream Response) {}
}

message RemoteCommandRequest {
    string name = 1;
    string description = 2;
    int64 group = 3;
}

message RemoteRequest {
    string from = 1;
    string message = 2;
    string chat =3;
 }
message Request {
    string state = 1;
    string nextstate = 2;
}

message Response {
    string from = 1;
    string message = 2;
    repeated string fields=3;
    }